erDiagram
    %% User Management
    ApplicationUser {
        string Id PK "Identity User ID"
        string BusinessName
        string Address
        string City
        string State
        string PostalCode
        string Country
        string TaxId
        UserType UserType "Admin/Wholesaler/Retailer"
        string UserName "From IdentityUser"
        string Email "From IdentityUser"
        string PhoneNumber "From IdentityUser"
    }
    
    %% Product Management
    Category {
        int Id PK
        string Name
        string CreatedById FK
    }
    
    Product {
        int Id PK
        string Name
        string Description
        string SKU
        int CategoryId FK
        string ImageUrl
    }
    
    WholesalerProduct {
        int Id PK
        int ProductId FK
        string WholesalerId FK
        decimal Price
        int StockQuantity
        bool IsActive
    }
    
    RetailerProduct {
        int Id PK
        int WholesalerProductId FK
        string RetailerId FK
        decimal PurchasePrice
        decimal SellingPrice
        int StockQuantity
        string Notes
    }
    
    %% Order Management
    Order {
        int Id PK
        string RetailerId FK "Nullable for external orders"
        string WholesalerId FK
        DateTime OrderDate
        OrderStatus Status "Pending/Processing/Shipped/Delivered/Completed/Cancelled"
        decimal TotalAmount
        string Notes
    }
    
    OrderItem {
        int Id PK
        int OrderId FK
        int WholesalerProductId FK "Nullable for partnership products"
        int PartnerProductId "For partnership products"
        string ProductName "For partnership products"
        int Quantity
        decimal UnitPrice
        decimal Subtotal
    }
    
    %% Cart Management
    Cart {
        int Id PK
        string RetailerId FK
        DateTime CreatedAt
    }
    
    CartItem {
        int Id PK
        int CartId FK
        int WholesalerProductId FK
        int Quantity
        decimal Price
    }
    
    %% Transaction & Payment
    Transaction {
        int Id PK
        int OrderId FK
        string RetailerId FK "Nullable for external orders"
        string WholesalerId FK
        decimal Amount
        decimal AmountPaid
        DateTime TransactionDate
        TransactionStatus Status "Pending/PartiallyPaid/Completed/Failed/Refunded"
        string PaymentMethod
        string TransactionReference
    }
    
    Payment {
        int Id PK
        int TransactionId FK
        decimal Amount
        DateTime PaymentDate
        PaymentMethod Method "CreditCard/BankTransfer/Cash/Other"
        string ReferenceNumber
        string Notes
    }
    
    %% Partnership Management
    RetailerPartnership {
        int Id PK
        string RetailerId FK
        string WholesalerName
        string PartnershipName
        string Notes
        DateTime CreatedDate
        bool IsActive
    }
    
    RetailerPartnerCategory {
        int Id PK
        int PartnershipId FK
        string Name
        string Description
        DateTime CreatedDate
        bool IsActive
    }
    
    RetailerPartnerProduct {
        int Id PK
        int PartnershipId FK
        int CategoryId FK
        string Name
        string Description
        decimal Price
        int StockQuantity
        string Notes
        DateTime CreatedDate
        bool IsActive
    }
    
    %% External Retailer Management
    WholesalerExternalRetailer {
        int Id PK
        string WholesalerId FK
        string RetailerName
        string ContactInfo
        string Notes
        bool IsActive
        DateTime CreatedDate
    }
    
    %% Relationships
    
    %% User relationships
    ApplicationUser ||--o{ Category : "creates"
    ApplicationUser ||--o{ WholesalerProduct : "owns_as_wholesaler"
    ApplicationUser ||--o{ RetailerProduct : "owns_as_retailer"
    ApplicationUser ||--o{ Order : "places_as_retailer"
    ApplicationUser ||--o{ Order : "receives_as_wholesaler"
    ApplicationUser ||--o{ Cart : "owns"
    ApplicationUser ||--o{ RetailerPartnership : "has_partnerships"
    ApplicationUser ||--o{ WholesalerExternalRetailer : "manages_external_retailers"
    
    %% Product relationships
    Category ||--o{ Product : "contains"
    Product ||--o{ WholesalerProduct : "sold_by_wholesalers"
    WholesalerProduct ||--o{ RetailerProduct : "purchased_by_retailers"
    WholesalerProduct ||--o{ CartItem : "in_cart"
    WholesalerProduct ||--o{ OrderItem : "ordered"
    
    %% Order relationships
    Order ||--o{ OrderItem : "contains"
    Order ||--|| Transaction : "has_transaction"
    
    %% Cart relationships
    Cart ||--o{ CartItem : "contains"
    
    %% Payment relationships
    Transaction ||--o{ Payment : "has_payments"
    
    %% Partnership relationships
    RetailerPartnership ||--o{ RetailerPartnerCategory : "has_categories"
    RetailerPartnership ||--o{ RetailerPartnerProduct : "has_products"
    RetailerPartnerCategory ||--o{ RetailerPartnerProduct : "categorizes"
} 